# orchestra-sdk

./: .gitignore  QUICKSTART.md  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml
deploy/: .env.example  README.md  build_musician.bat  build_musician.sh  check.py  migrate.bat  migrate.sh  orchestra.bat  orchestra.ps1  orchestra.sh  setup.py
docker/: .env.example  Dockerfile.musician  docker-compose.yml
examples/memory_scribe/: conductor_config.yaml  program.md  train.py
examples/synthetic/: Dockerfile  README.md  conductor_config.yaml  program.md  train.py
k8s/: musician-job-template.yaml  namespace.yaml  ollama-deployment.yaml  pvcs.yaml  secrets.yaml.template
orchestra_sdk/: __init__.py  __main__.py  config.py  config_template.py  constants.py  context.py  db_migrations.py  llm.py  loop.py
orchestra_sdk/memory/: __init__.py  embedder.py  store.py
orchestra_sdk/runner/: __init__.py  docker_runner.py  k8s_runner.py  local_runner.py
orchestra_sdk/tools/: __init__.py  base.py  file_tools.py  git_tools.py  memory_tools.py  run_experiment.py  supabase_tools.py
tests/: __init__.py  conftest.py  test_config_and_context.py  test_integration.py  test_tools.py
