[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestra_sdk"
version = "0.1.0a1"
description = "Autonomous LLM-driven research loop for fine-tuning local language models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Karl M." }]

dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "gitpython>=3.1",
    "supabase>=2.4",
    "numpy>=1.26",
    "docker>=7.0",
    "kubernetes>=29.0",
    "rich>=13.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "coverage>=7.4",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
orchestra = "orchestra_sdk.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["orchestra_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"


[tool.setuptools.package-data]
orchestra_sdk = ["py.typed"]
